[gd_scene load_steps=8 format=3 uid="uid://dg5fxf0fd80b4"]

[ext_resource type="Script" uid="uid://dyiejq4utg8km" path="res://scripts/general.gd" id="1_3xyx7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yfep1"]
bg_color = Color(1, 1, 1, 0.678431)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3xyx7"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_yfep1"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5tkcm"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_di6hf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xyx7"]
bg_color = Color(0, 0, 0, 1)

[node name="GeneralOptions" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3xyx7")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -441.0
offset_top = -295.0
offset_right = 441.0
offset_bottom = 295.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 9
theme_override_constants/margin_top = 9
theme_override_constants/margin_right = 9
theme_override_constants/margin_bottom = 9

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/normal = SubResource("StyleBoxFlat_yfep1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_yfep1")
theme_override_styles/hover = SubResource("StyleBoxFlat_yfep1")
theme_override_styles/focus = SubResource("StyleBoxFlat_yfep1")

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SettingName" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Fullscreen"

[node name="Spacer" type="Control" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Button/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FullscreenToggle" type="CheckButton" parent="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Button/HBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxEmpty_3xyx7")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_yfep1")
theme_override_styles/hover = SubResource("StyleBoxEmpty_5tkcm")
theme_override_styles/focus = SubResource("StyleBoxEmpty_di6hf")

[node name="Return" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_3xyx7")
text = "Return"

[connection signal="toggled" from="PanelContainer/MarginContainer/VBoxContainer/ScrollContainer/Button/HBoxContainer/FullscreenToggle" to="." method="_on_fullscreen_toggle_toggled"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_pressed"]
